style.css
* {
    font-family: 'Roboto Condensed';
    margin: 0;
    padding: 0;
}

body {
    background-color: #0d0e54;
    color: #caf0f8;
}

main {
    align-items: center;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding-top: 20%;
    text-align: center;
}

#number {
    text-align: center;
}

#convert-btn {
    background-color: #00b4d8;
    height: 40px;
    width: 70px;
}

#number, #convert-btn {
    border: none;
    border-radius: 3px;
    font-size: 16px;
    font-weight: 500;
    height: 35px;
    width: 150px;
}

